// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-noformat-pragma.vue - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- @noformat -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<!-- @noformat -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;

exports[`with-noprettier-pragma.vue - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- @noprettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<!-- @noprettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;

exports[`without-pragma.vue - {"checkIgnorePragma":true} format 1`] = `
====================================options=====================================
checkIgnorePragma: true
parsers: ["vue"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;
